--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Modded Boost Launcher</title>
   </head>
 
-  <body>
+  <body class="bg-transparent">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
