--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Modded Boost Launcher</title>
   </head>
 
-  <body class="bg-transparent">
+<!--  <body class="bg-transparent">-->
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
